Bug 1345478 - Make the PrintErrorKind::Error case explicitly unreachable in PrintSingleError; r=bbouvier

This patch explicitly calls MOZ_CRASH() in the switch case
PrintErrorKind::Error that is never reached inside the function
PrintSingleError in the file js/src/jscntxt.cpp.
Explicitly handling all the possible cases avoids the compiler to issue
warnings for them: a non handled case in the switch code that might derive
from additions to the enum class PrintErrorKind can be caught at compile time
rather then having a default switch case for handling it, which instead would
be called at runtime.

MozReview-Commit-ID: ECZlMoLvn2m